<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemInicio"
        android:icon="@drawable/ic_inicio"
        android:title="@string/itemInicio" />
    <item
        android:id="@+id/itemCogerCita"
        android:icon="@drawable/ic_coger_cita"
        android:title="@string/itemCogerCita" />
    <item
        android:id="@+id/itemRecetario"
        android:icon="@drawable/ic_recetario"
        android:title="@string/itemRecetario" />
    <item
        android:id="@+id/itemContacta"
        android:icon="@drawable/ic_contacta"
        android:title="@string/itemContacta" />
    <item
        android:id="@+id/itemPerfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/itemPerfil" />
    <item
        android:id="@+id/itemCerrarSesion"
        android:icon="@drawable/ic_cerrar_sesion"
        android:title="@string/itemCerrarSesion" />
</menu>