<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".FrRegistro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondo"
        android:backgroundTint="@color/AzulFondo">

        <LinearLayout
            android:id="@+id/lytDatos"
            android:layout_width="match_parent"
            android:layout_height="598dp"


            android:background="@drawable/redondeado"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingTop="50dp"
            android:paddingEnd="50dp"
            android:paddingBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Rosita"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/Rosita"
                app:hintTextColor="@color/Rosita">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtUsuario"
                    android:paddingStart="0dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Rosita"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/Rosita"
                app:hintTextColor="@color/Rosita">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtContrasena"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCorr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Rosita"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/Rosita"
                app:hintTextColor="@color/Rosita">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtCorreo"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Rosita"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/Rosita"
                app:hintTextColor="@color/Rosita">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtDireccion"
                    android:paddingStart="0dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTlf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Rosita"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/Rosita"
                app:hintTextColor="@color/Rosita">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtTelefono"
                    android:inputType="phone"
                    android:paddingStart="0dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:backgroundTint="@color/fondoBoton"
                android:text="@string/txtRegistro"
                android:textAlignment="center"
                android:textColor="@color/colorFondo"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:rippleColor="#FFFFFF" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/fondoBoton"
                android:text="@string/txtCancelar"
                android:textAlignment="center"
                android:textColor="@color/cerrarSesion"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:rippleColor="#FFFFFF" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="116dp"
            android:layout_height="119dp"
            app:layout_constraintBottom_toTopOf="@+id/lytDatos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/diente"
            tools:src="@drawable/diente" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>