<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".controllers.MainActivity"
    android:screenOrientation="portrait">


    <FrameLayout
        android:id="@+id/frRegistro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLogin"
        style="@style/inputText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/Rosita"
        app:boxBackgroundColor="@color/logo_background"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/Rosita"
        app:constraint_referenced_tags="30dp"
        app:hintTextColor="@color/Rosita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextosInterior2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtContrasena"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dentista" />

    <Button
        android:id="@+id/btnEntrar"
        style="@style/BotonesInicio"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Azulito"
        android:fontFamily="@font/quicksandregular"
        android:text="@string/entrar"
        app:cornerRadius="@dimen/cornerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbRecordar" />

    <CheckBox
        android:id="@+id/chbRecordar"
        style="@style/Theme.ClinicaDental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksandregular"
        android:text="@string/recordar"
        android:textColorHighlight="@color/Rosita"
        android:textColorLink="@color/Rosita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin" />

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/BotonesInicio"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/secundario"
        android:fontFamily="@font/quicksandregular"
        android:text="@string/registrar"
        app:cornerRadius="@dimen/cornerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        app:layout_constraintVertical_bias="0.072" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsuario"
        style="@style/inputText"
        app:boxBackgroundColor="@color/logo_background"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/Rosita"
        app:hintTextColor="@color/Rosita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsuarioLogin"
            style="@style/TextosInterior2"
            android:hint="@string/txtUsuario" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>