<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".FrContacta">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblSobreNosotrosCont"
            android:text="@string/lblSobreNosotrosCont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/titulosContacta" />

        <TextView
            android:id="@+id/lblParrafo1Cont"
            android:text="@string/lblParrafo1Cont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSobreNosotrosCont"
            style="@style/textosContacta" />

        <TextView
            android:id="@+id/lblTratamientosCont"
            style="@style/textosContacta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/lblTratamientosCont"
            android:textSize="@dimen/textSizeLblTitulosCont"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblParrafo1Cont" />

        <TextView
            android:id="@+id/textView5"
            style="@style/textosContacta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/lblParafo2Cont"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTratamientosCont" />

        <TextView
            android:id="@+id/lblUbicacionCont"
            style="@style/titulosContacta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lblUbicacionCont"
            android:textSize="@dimen/textSizeLblTitulosCont"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.clinicadental.FrMapa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altoMapaCont"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUbicacionCont" />

        <TextView
            android:id="@+id/lblContactaCont"
            style="@style/titulosContacta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lblContactaCont"
            android:textSize="@dimen/textSizeLblTitulosCont"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

        <ImageButton
            android:id="@+id/imgFacebook"
            android:layout_width="82dp"
            android:layout_height="79dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTintMode="add"
            android:scaleType="fitCenter"
            android:src="@drawable/drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblContactaCont"
            app:layout_constraintVertical_bias="0.43" />

        <ImageButton
            android:id="@+id/imgGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:src="@drawable/gmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgInstagram"
            app:layout_constraintStart_toEndOf="@+id/imgFacebook"
            app:layout_constraintTop_toBottomOf="@+id/lblContactaCont" />

        <ImageButton
            android:id="@+id/imgInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:src="@drawable/instagram"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgTwitter"
            app:layout_constraintStart_toEndOf="@+id/imgGmail"
            app:layout_constraintTop_toBottomOf="@+id/lblContactaCont"
            app:layout_constraintVertical_bias="0.506" />

        <ImageButton
            android:id="@+id/imgTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgInstagram"
            app:layout_constraintTop_toBottomOf="@+id/lblContactaCont"
            app:layout_constraintVertical_bias="0.506" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>